# loadgen2

./: .gitignore  README.md
language/deepseek-r1/: LICENSE.txt  download_tokenizer.py  pyproject.toml  run_mlperf.py
language/deepseek-r1/backends/: sglang_backend.py  utils.py
language/deepseek-r1/mlperf/: qsl.py  user.conf
language/deepseek-r1/utils/: backend_registry.py  tokenization.py
language/glm-5.1/: .gitignore  README.md  cache_analysis_laga.csv  cache_analysis_result.csv  calc_reuse.py  data-process.md  eval_accuracy.py  gen_test_dataset.py  generate_timeline.py  myloadgen.py  preprocess.json  pyproject.toml  run_eval.py  run_mlperf.py  run_session_mlperf.py  run_test.sh  run_test_mlperf.sh  run_test_session.sh  setup.sh
language/glm-5.1/backends/: __init__.py  base_backend.py  openai_backend.py  utils.py
language/glm-5.1/data_tools/: encrypt_dataset.py  split_andmapping.py  split_conversation.py  test_split.py
language/glm-5.1/docker/: Dockerfile  entrypoint.sh
language/glm-5.1/docs/: SESSION_SUT_DESIGN.md
language/glm-5.1/mlperf/: __init__.py  base_sut.py  offline_sut.py  qsl.py  server_sut.py  session_scheduler.py  session_stats.py  session_sut.py  stream_process_pool.py  user.conf  utils.py
language/glm-5.1/mock_server/: Cargo.toml
language/glm-5.1/scripts/: cache_analysis.py  cache_analysis2.py  split_codex_swebenchpro.py  split_conversations.py
language/glm-5.1/session_mlperf_results/: mlperf_log_detail.txt  mlperf_log_summary.txt  session_results.json  timeline.html  trace_results.json
language/glm-5.1/utils/: __init__.py  (+6 more)
(+17 files in other folders)
